[package]
name = "pgfx"
version = "0.1.36"
edition = "2024"

[dependencies]
glam = { version = "0.32.1", optional = true }
image = { version = "0.25.10", default-features = false, optional = true }
web-time = { version = "1.1.0", optional = true }

[features]
default = ["shapes"]
shapes = []

[[test]]
name = "ut_shapes"
path = "tests/ut_shapes.rs"
required-features = ["shapes"]
